--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
   repositories {
+  jcenter()	
     maven { 
     url 'http://repo.spring.io/plugins-release' 
     mavenCentral()
@@ -46,6 +47,7 @@ compileAvro {
 }
 
 repositories {
+  mavenLocal()
   mavenCentral()
   maven { url 'http://conjars.org/repo/' }
 }
@@ -57,7 +59,7 @@ dependencies {
   compile( group: 'cascading', name: 'cascading-expression', version: cascadingVersion )
 
   provided( group: 'org.apache.hadoop', name: 'hadoop-common', version: hadoopVersion )
-  provided( group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client', version: hadoopVersion )
+  provided( group: 'org.apache.hadoop', name: 'hadoop-client', version: hadoopVersion )
   provided( group: 'org.apache.hadoop', name: 'hadoop-mapreduce-client-core', version: hadoopVersion )
 }
 
