--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ ext.cascadingVersion = '3.0.0'
 ext.hadoopVersion = '2.7.3'
 
 // Change setting to 1.6 if you want to build with Java 6
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencies {
   compileAvro
@@ -67,13 +67,16 @@ jar {
   description = "Assembles a Hadoop ready jar file"
   doFirst {
     into( 'lib' ) {
-      from { configurations.compile.minus( [configurations.provided] ) }
+      /*from { configurations.compile.minus( [configurations.provided] ) }*/
+      from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+      }
     }
   }
 
   manifest {
     attributes( "Main-Class": "com/nixsolutions/hadoop/facilityavro/Main" )
   }
-  
-  
 }
