--- a/build.gradle
+++ b/build.gradle
@@ -5,19 +5,15 @@ buildscript {
     url 'http://repo.spring.io/plugins-release' 
     mavenCentral()
     maven { url "http://clojars.org/repo" } // Required to automatically download this plugin
-    
     }
   }
   dependencies {
     classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:2.2.1'
     classpath 'org.apache.maven:maven-artifact:2.2.1' // 3.x won't work
-    classpath 'org.apache.avro:avro-compiler:1.7.7' // Use Avro 1.7.7 to compile the Avro files
-    //(version 1.8.1 generates bad file!!)
+    classpath 'org.apache.avro:avro-compiler:1.7.7'
     classpath 'org.clojars.miguno:avro-gradle-plugin:1.7.7.2'
-   
   }
 }
-
 
 apply plugin: 'java'
 apply plugin: 'idea'
@@ -30,14 +26,12 @@ archivesBaseName = 'facility'
 ext.cascadingVersion = '3.0.0'
 ext.hadoopVersion = '2.7.3'
 
-// Change setting to 1.6 if you want to build with Java 6
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
   compileAvro
 }
-
 compileAvro {
   source = 'src/main/avro'
   destinationDir = file("src/main/java")
@@ -56,7 +50,6 @@ dependencies {
   compile( group: 'cascading', name: 'cascading-core', version: cascadingVersion )
   compile( group: 'cascading', name: 'cascading-local', version: cascadingVersion )
   compile( group: 'cascading', name: 'cascading-hadoop2-mr1', version: cascadingVersion )
-  /*compile( group: 'cascading', name: 'cascading-expression', version: cascadingVersion )*/
 
   provided( group: 'org.apache.hadoop', name: 'hadoop-common', version: hadoopVersion )
   provided( group: 'org.apache.hadoop', name: 'hadoop-client', version: hadoopVersion )
@@ -67,12 +60,7 @@ jar {
   description = "Assembles a Hadoop ready jar file"
   doFirst {
     into( 'lib' ) {
-      /*from { configurations.compile.minus( [configurations.provided] ) }*/
-      from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {
-        exclude "META-INF/*.SF"
-        exclude "META-INF/*.DSA"
-        exclude "META-INF/*.RSA"
-      }
+      from { configurations.compile.minus( [configurations.provided] ) }
     }
   }
 
