read from root folder write to root folder

--- a/src/main/resources/job.properties
+++ b/src/main/resources/job.properties
@@ -8,3 +8,4 @@ workflowAppUri=${nameNode}/user/root
 oozie.use.system.libpath=true
 oozie.service.WorkflowAppService.system.libpath=${nameNode}/user/root/share/lib
 oozie.libpath=${nameNode}/user/root/share/lib
+customerID=${mapreduce.job.user.name}
