--- a/src/main/resources/job.properties
+++ b/src/main/resources/job.properties
@@ -3,9 +3,9 @@ jobTracker=sandbox.hortonworks.com:8050
 queueName=default
 examplesRoot=examples
 appName=sampleApp
-oozie.coord.application.path=${nameNode}/user/root
-workflowAppUri=${nameNode}/user/root
+oozie.coord.application.path=${nameNode}/app
+workflowAppUri=${nameNode}/app
 oozie.use.system.libpath=true
-oozie.service.WorkflowAppService.system.libpath=${nameNode}/user/root/share/lib
-oozie.libpath=${nameNode}/user/root/share/lib
-customerID=${mapreduce.job.user.name}
+oozie.libpath=${nameNode}/app/share/lib
+customerID=1000
+ce_supplierId=1001
