--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -3,9 +3,9 @@ job('toJar') {
         git('git://github.com/Beletskyy/HadoopTestFacilityAvro.git')
     }
     triggers {
-        scm('H/2 * * * *')
+        scm('* * * * *')
     }
     steps {
-        gradle('build jar')
+        gradle('jar')
     }
 }
