--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -6,6 +6,6 @@ job('toJar') {
         scm('* * * * *')
     }
     steps {
-        gradle('assemble clean jar')
+        gradle('testClasses')
     }
 }
