--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -1,11 +1,5 @@
 job('build') {
-//    scm {
-//        git('git://github.com/Beletskyy/HadoopTestFacilityAvro.git')
-//    }
-//    triggers {
-//        scm('* * * * *')
-//    }
     steps {
-        gradle('clean build')
+        gradle('build')
     }
 }
