--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -1,5 +1,11 @@
 job('build') {
+    scm {
+        git('git://github.com/Beletskyy/HadoopTestFacilityAvro.git')
+    }
+    triggers {
+        scm('* * * * *')
+    }
     steps {
-        gradle('build')
+        gradle('clean build')
     }
 }
