--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -2,9 +2,9 @@ job('build') {
 //    scm {
 //        git('git://github.com/Beletskyy/HadoopTestFacilityAvro.git')
 //    }
-    triggers {
-        scm('* * * * *')
-    }
+//    triggers {
+//        scm('* * * * *')
+//    }
     steps {
         gradle('clean build')
     }
