--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'provided-base'
 apply plugin: 'avro-gradle-plugin'
+apply plugin: 'checkstyle'
+apply plugin: 'findbugs'
+apply plugin: 'pmd'
 //apply plugin: 'application'
 // tasks: run — запуск приложения;
 // installApp — установка приложения на компьютер,
