--- a/build.gradle
+++ b/build.gradle
@@ -84,11 +84,11 @@ jar {
 
   tasks.withType(Checkstyle) {
     reports {
-      xml.enabled false
-      html.enabled true
+      xml.enabled true
+      html.enabled false
       source 'src'
 //      html.destination rootProject.file("build/reports/checkstyle-result.html")
-      xml.destination rootProject.file("checkstyle-result.xml")
+      xml.destination rootProject.file("build/reports/checkstyle/checkstyle-result.xml")
       ignoreFailures = true
     }
   }
