--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ apply plugin: 'provided-base'
 apply plugin: 'avro-gradle-plugin'
 apply plugin: 'checkstyle'
 apply plugin: 'findbugs'
-//apply plugin: 'pmd'
+apply plugin: 'pmd'
 
 //apply plugin: 'application'
 // tasks: run — запуск приложения;
@@ -41,7 +41,7 @@ checkstyle {
   toolVersion = '6.18'
 }
 findbugs.toolVersion = '3.0.1'
-
+pmd.toolVersion = '5.5.2'
 
 dependencies {
   compileAvro
@@ -103,6 +103,43 @@ jar {
       effort = "max"
       reportLevel = "high"
       ignoreFailures = true
+    }
+  }
+
+  tasks.withType(Pmd) {
+    reports {
+      ignoreFailures = true
+      xml.enabled true
+      xml.destination rootProject.file("build/reports/pmd/pmd.xml")
+      html.enabled false
+      html.destination rootProject.file("build/reports/pmd/pmd.html")
+      ruleSets = [
+              'java-basic',
+              'java-braces',
+              'java-clone',
+              'java-codesize',
+              'java-comments',
+              'java-controversial',
+              'java-coupling',
+              'java-design',
+              'java-empty',
+              'java-finalizers',
+              'java-imports',
+              'java-j2ee',
+              'java-javabeans',
+              'java-junit',
+              'java-logging-jakarta-commons',
+              'java-logging-java',
+              'java-migrating',
+              'java-naming',
+              'java-optimizations',
+              'java-strictexception',
+              'java-strings',
+              'java-sunsecure',
+              'java-typeresolution',
+              'java-unnecessary',
+              'java-unusedcode'
+      ]
     }
   }
 
