--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -22,6 +22,9 @@ job('build') {
             pmd()
             tasks()
             warnings()
+            thresholds(
+                    unstableTotal: [all: 1, high: 2, normal: 3, low: 4]
+            )
         }
     }
 }
