--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -10,13 +10,6 @@ job('build') {
         gradle('build')
     }
     publishers {
-        /*analysisCollector {
-            checkstyle (includeCheckstyle = true)
-            findbugs (includeFindbugs = true)
-            pmd (includePmd = true)
-        }
-*/
-        publishers {
             checkstyle('**/checkstyle-result.xml') {
                 healthLimits(3, 20)
                 thresholdLimit('high')
@@ -33,18 +26,37 @@ job('build') {
                         failedNew: [all: 13, high: 14, normal: 15, low: 16]
                 )
             }
-        }
-
-
-/*        analysisCollector {
-            checkstyle()
-            findbugs()
-            pmd()
-            tasks()
-            warnings()
+        findbugs('**/findbugsXml.xml', false) {
+                healthLimits(3, 20)
+                thresholdLimit('high')
+                defaultEncoding('UTF-8')
+                canRunOnFailed(true)
+                useStableBuildAsReference(true)
+                useDeltaValues(true)
+                computeNew(true)
+                shouldDetectModules(true)
+                thresholds(
+                        unstableTotal: [all: 1, high: 2, normal: 3, low: 4],
+                        failedTotal: [all: 5, high: 6, normal: 7, low: 8],
+                        unstableNew: [all: 9, high: 10, normal: 11, low: 12],
+                        failedNew: [all: 13, high: 14, normal: 15, low: 16]
+                )
+            }
+        pmd('**/*.pmd') {
+            healthLimits(3, 20)
+            thresholdLimit('high')
+            defaultEncoding('UTF-8')
+            canRunOnFailed(true)
+            useStableBuildAsReference(true)
+            useDeltaValues(true)
+            computeNew(true)
+            shouldDetectModules(true)
             thresholds(
-                    unstableTotal: [all: 1, high: 2, normal: 3, low: 4]
+                    unstableTotal: [all: 1, high: 2, normal: 3, low: 4],
+                    failedTotal: [all: 5, high: 6, normal: 7, low: 8],
+                    unstableNew: [all: 9, high: 10, normal: 11, low: 12],
+                    failedNew: [all: 13, high: 14, normal: 15, low: 16]
             )
-        }*/
+        }
     }
 }
