--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -11,11 +11,11 @@ job('build') {
     }
     publishers {
             checkstyle('**/checkstyle-result.xml') {
-                healthLimits(3, 20)
-                thresholdLimit('high')
-                defaultEncoding('UTF-8')
-                canRunOnFailed(true)
-                useStableBuildAsReference(true)
+//                healthLimits(3, 20)
+//                thresholdLimit('high')
+//                defaultEncoding('UTF-8')
+//                canRunOnFailed(true)
+//                useStableBuildAsReference(true)
                 useDeltaValues(true)
                 computeNew(true)
                 shouldDetectModules(true)
