--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -19,12 +19,12 @@ job('build') {
 //                useDeltaValues(true)
 //                computeNew(true)
 //                shouldDetectModules(true)
-                thresholds(
-                        unstableTotal: [all: 1, high: 2, normal: 3, low: 4],
-                        failedTotal: [all: 5, high: 6, normal: 7, low: 8],
-                        unstableNew: [all: 9, high: 10, normal: 11, low: 12],
-                        failedNew: [all: 13, high: 14, normal: 15, low: 16]
-                )
+//                thresholds(
+//                        unstableTotal: [all: 1, high: 2, normal: 3, low: 4],
+//                        failedTotal: [all: 5, high: 6, normal: 7, low: 8],
+//                        unstableNew: [all: 9, high: 10, normal: 11, low: 12],
+//                        failedNew: [all: 13, high: 14, normal: 15, low: 16]
+//                )
             }
         findbugs('**/findbugsXml.xml', false) {
                 healthLimits(3, 20)
