--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -12,11 +12,11 @@ job('build') {
     publishers {
             checkstyle('build/reports/checkstyle/checkstyle-result.xml') {
                 healthLimits(3, 20)
-//                thresholdLimit('high')
+                thresholdLimit('high')
                 defaultEncoding('UTF-8')
                 canRunOnFailed(true)
 //                useStableBuildAsReference(true)
-//                useDeltaValues(true)
+                useDeltaValues(true)
 //                computeNew(true)
 //                shouldDetectModules(true)
 //                thresholds(
@@ -28,7 +28,7 @@ job('build') {
             }
         findbugs('build/reports/findbugs/findbugs.xml', false) {
                 healthLimits(3, 20)
-//                thresholdLimit('high')
+                thresholdLimit('high')
                 defaultEncoding('UTF-8')
                 canRunOnFailed(true)
 //                useStableBuildAsReference(true)
@@ -44,7 +44,7 @@ job('build') {
             }
         pmd('build/reports/pmd/pmd.xml') {
             healthLimits(3, 20)
-//            thresholdLimit('high')
+            thresholdLimit('high')
             defaultEncoding('UTF-8')
             canRunOnFailed(true)
 //            useStableBuildAsReference(true)
