--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -17,7 +17,7 @@ job('build') {
                 canRunOnFailed(true)
                 useStableBuildAsReference(true)
                 useDeltaValues(true)
-//                computeNew(true)
+                computeNew(true)
 //                shouldDetectModules(true)
 //                thresholds(
 //                        unstableTotal: [all: 1, high: 2, normal: 3, low: 4],
@@ -33,7 +33,7 @@ job('build') {
                 canRunOnFailed(true)
                 useStableBuildAsReference(true)
                 useDeltaValues(true)
-//                computeNew(true)
+                computeNew(true)
 //                shouldDetectModules(true)
 //                thresholds(
 //                        unstableTotal: [all: 1, high: 2, normal: 3, low: 4],
@@ -49,7 +49,7 @@ job('build') {
             canRunOnFailed(true)
             useStableBuildAsReference(true)
             useDeltaValues(true)
-//            computeNew(true)
+            computeNew(true)
 //            shouldDetectModules(true)
 //            thresholds(
 //                    unstableTotal: [all: 1, high: 2, normal: 3, low: 4],
