--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -18,7 +18,7 @@ job('build') {
                 useStableBuildAsReference(true)
                 useDeltaValues(true)
                 computeNew(true)
-//                shouldDetectModules(true)
+                shouldDetectModules(true)
 //                thresholds(
 //                        unstableTotal: [all: 1, high: 2, normal: 3, low: 4],
 //                        failedTotal: [all: 5, high: 6, normal: 7, low: 8],
@@ -34,7 +34,7 @@ job('build') {
                 useStableBuildAsReference(true)
                 useDeltaValues(true)
                 computeNew(true)
-//                shouldDetectModules(true)
+                shouldDetectModules(true)
 //                thresholds(
 //                        unstableTotal: [all: 1, high: 2, normal: 3, low: 4],
 //                        failedTotal: [all: 5, high: 6, normal: 7, low: 8],
@@ -50,7 +50,7 @@ job('build') {
             useStableBuildAsReference(true)
             useDeltaValues(true)
             computeNew(true)
-//            shouldDetectModules(true)
+            shouldDetectModules(true)
 //            thresholds(
 //                    unstableTotal: [all: 1, high: 2, normal: 3, low: 4],
 //                    failedTotal: [all: 5, high: 6, normal: 7, low: 8],
