--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,7 @@ jar {
       html.enabled false
       xml.enabled true
       xml.destination rootProject.file("build/reports/findbugs/findbugs.xml")
+      sourceSets = [sourceSets.main]
       effort = "max"
       reportLevel = "high"
       ignoreFailures = true
