--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,7 @@ ext.cascadingVersion = '3.0.0'
 ext.hadoopVersion = '2.7.3'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
-checkstyle {
-  toolVersion = '6.18'
-}
+checkstyle.toolVersion = '6.18'
 findbugs.toolVersion = '3.0.1'
 pmd.toolVersion = '5.5.2'
 
@@ -72,65 +70,63 @@ jar {
       from { configurations.compile.minus( [configurations.provided] ) }
     }
   }*/
-
-  tasks.withType(Checkstyle) {
-    reports {
-      source 'src'
-      html.enabled false
-      xml.enabled true
-      xml.destination rootProject.file("build/reports/checkstyle/checkstyle-result.xml")
-      ignoreFailures = true
-    }
-  }
-
-  tasks.withType(FindBugs) {
-    reports {
-      html.enabled false
-      xml.enabled true
-      xml.destination rootProject.file("build/reports/findbugs/findbugs.xml")
-      effort = "max"
-      reportLevel = "high"
-      ignoreFailures = true
-    }
-  }
-
-  tasks.withType(Pmd) {
-    reports {
-      ignoreFailures = true
-      html.enabled false
-      xml.enabled true
-      xml.destination rootProject.file("build/reports/pmd/pmd.xml")
-      ruleSets = [
-              'java-basic',
-              'java-braces',
-              'java-clone',
-              'java-codesize',
-              'java-comments',
-              'java-controversial',
-              'java-coupling',
-              'java-design',
-              'java-empty',
-              'java-finalizers',
-              'java-imports',
-              'java-j2ee',
-              'java-javabeans',
-              'java-junit',
-              'java-logging-jakarta-commons',
-              'java-logging-java',
-              'java-migrating',
-              'java-naming',
-              'java-optimizations',
-              'java-strictexception',
-              'java-strings',
-              'java-sunsecure',
-              'java-typeresolution',
-              'java-unnecessary',
-              'java-unusedcode'
-      ]
-    }
-  }
-
   manifest {
     attributes( "Main-Class": "com/nixsolutions/hadoop/facilityavro/Main" )
+  }
+}
+tasks.withType(Checkstyle) {
+  reports {
+    source 'src'
+    html.enabled false
+    xml.enabled true
+    xml.destination rootProject.file("build/reports/checkstyle/checkstyle-result.xml")
+    ignoreFailures = true
+  }
+}
+
+tasks.withType(FindBugs) {
+  reports {
+    html.enabled false
+    xml.enabled true
+    xml.destination rootProject.file("build/reports/findbugs/findbugs.xml")
+    effort = "max"
+    reportLevel = "high"
+    ignoreFailures = true
+  }
+}
+
+tasks.withType(Pmd) {
+  reports {
+    ignoreFailures = true
+    html.enabled false
+    xml.enabled true
+    xml.destination rootProject.file("build/reports/pmd/pmd.xml")
+    ruleSets = [
+            'java-basic',
+            'java-braces',
+            'java-clone',
+            'java-codesize',
+            'java-comments',
+            'java-controversial',
+            'java-coupling',
+            'java-design',
+            'java-empty',
+            'java-finalizers',
+            'java-imports',
+            'java-j2ee',
+            'java-javabeans',
+            'java-junit',
+            'java-logging-jakarta-commons',
+            'java-logging-java',
+            'java-migrating',
+            'java-naming',
+            'java-optimizations',
+            'java-strictexception',
+            'java-strings',
+            'java-sunsecure',
+            'java-typeresolution',
+            'java-unnecessary',
+            'java-unusedcode'
+    ]
   }
 }
