--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -1,7 +1,7 @@
 job('build') {
-    scm {
-        git('ssh://root@10.10.21.183:22/root/sandbox/HadoopTestFacilityAvro')
-    }
+   // scm {
+      //  git('ssh://root@10.10.21.183:22/root/sandbox/HadoopTestFacilityAvro')
+   // }
     triggers {
         scm('* * * * *')
     }
