--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -11,7 +11,7 @@ job('build') {
         scm('* * * * *')
     }
     steps {
-        gradle('build someTask')
+        gradle('build')
     }
     publishers {
         checkstyle('build/reports/checkstyle/checkstyle-result.xml') {
