--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -10,7 +10,7 @@ job('MyJob') {
         gradle('build')
     }
     publishers {
-        checkstyle('build/reports/checkstyle/checkstyle-result.xml') {
+       /* checkstyle('build/reports/checkstyle/checkstyle-result.xml') {
                 healthLimits(3, 25)
                 thresholdLimit('high')
                 defaultEncoding('UTF-8')
@@ -36,9 +36,9 @@ job('MyJob') {
             useStableBuildAsReference(true)
             useDeltaValues(true)
             computeNew(true)
-        }
+        }*/
         publishScp('10.10.21.184') {
-            entry('build/libs/facility.jar', '/app', true)
+            entry('/build/libs/facility.jar', '/app', true)
         }
     }
 }
