--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -44,11 +44,10 @@ job('MyJob') {
         publishOverSsh {
             server('10.10.21.184') {
                 credentials('root') {
-                    key('')
                 }
                 label('server-01')
                 transferSet {
-                    sourceFiles('**/*.jar')
+                    sourceFiles('**/facility.jar')
 
                 }
             }
