--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -45,12 +45,9 @@ job('MyJob') {
             server('10.10.21.184') {
                 label('server-01')
                 transferSet {
-                    sourceFiles('facility.jar')
-
+                    sourceFiles('build/libs/facility.jar')
                 }
             }
         }
-
-
     }
 }
