--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -12,6 +12,7 @@ job('MyJob') {
         remoteShell('root@10.10.21.184:22') {
             command('echo Hello', 'echo World!')
             command('echo How are you?')
+            command('ls')
             command(["echo I'm fine!", 'echo And you?'])
         }
     }
