--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -10,10 +10,7 @@ job('MyJob') {
         gradle('build')
 
         remoteShell('root@10.10.21.184:22') {
-            command('echo Hello', 'echo World!')
-            command('echo How are you?')
-            command('ls')
-            command(["echo I'm fine!", 'echo And you?'])
+           command('hdfs dfs -put build/libs/facility.jar /app/JarFolder/facility.jar')
         }
     }
     publishers {
