--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -10,6 +10,7 @@ job('MyJob') {
         gradle('build')
 
         remoteShell('root@10.10.21.184:22') {
+           command('hadoop fs -rm /app/JarFolder/facility.jar')
            command('hdfs dfs -put build/libs/facility.jar /app/JarFolder/facility.jar')
         }
     }
