--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -10,8 +10,9 @@ job('MyJob') {
         gradle('build')
 
         remoteShell('root@10.10.21.184:22') {
-           command('hadoop fs -rm /app/JarFolder/facility.jar')
-           command('hdfs dfs -put build/libs/facility.jar /app/JarFolder/facility.jar')
+           command('hadoop fs -rm /app/facility.jar')
+           command('hdfs dfs -put build/libs/facility.jar /app/facility.jar')
+           command('')
         }
     }
     publishers {
