--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -13,6 +13,8 @@ job('MyJob') {
                 label('server-01')
                 transferSet {
                     sourceFiles('build/libs/facility.jar')
+                    sourceFiles('src/main/resources/job.properties')
+                    flattenFiles(true)
                 }
             }
         }
@@ -20,7 +22,7 @@ job('MyJob') {
         remoteShell('root@10.10.21.184:22') {
            command('hadoop fs -rm /app/facility.jar')
            command('hdfs dfs -put build/libs/facility.jar /app/facility.jar')
-           command('oozie job -oozie http://10.10.21.184:11000/oozie -config props/job.properties -run')
+           command('oozie job -oozie http://10.10.21.184:11000/oozie -config build/libs/job.properties -run')
         }
     }
     publishers {
