--- a/src/main/resources/job.properties
+++ b/src/main/resources/job.properties
@@ -9,4 +9,4 @@ oozie.libpath=${nameNode}/app
 ce_supplierId=1001
 customerID=1000
 wf_application_path=hdfs://sandbox.hortonworks.com:8020/user/hue/oozie/workspaces/_hue_-oozie-2-1479743686.16
-workflowAppUri=${nameNode}/user/hue/oozie/workspaces/_hue_-oozie-2-1479743686.16
+#workflowAppUri=${nameNode}/user/hue/oozie/workspaces/_hue_-oozie-2-1479743686.16
