--- a/src/main/resources/job.properties
+++ b/src/main/resources/job.properties
@@ -3,10 +3,10 @@ jobTracker=sandbox.hortonworks.com:8050
 queueName=default
 examplesRoot=examples
 appName=sampleApp
-oozie.coord.application.path=${nameNode}/user/hue/oozie/workspaces/_hue_-oozie-6-1479811063.86
+oozie.coord.application.path=${nameNode}/app/config
 oozie.use.system.libpath=true
 oozie.libpath=${nameNode}/app
 ce_supplierId=1001
 customerID=1000
-wf_application_path=hdfs://sandbox.hortonworks.com:8020/user/hue/oozie/workspaces/_hue_-oozie-2-1479743686.16
+wf_application_path=hdfs://sandbox.hortonworks.com:8020/app/config
 #workflowAppUri=${nameNode}/user/hue/oozie/workspaces/_hue_-oozie-2-1479743686.16
