--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -35,6 +35,8 @@ job('MyJob') {
            command('hdfs dfs -put build/libs/facility.jar /app/facility.jar')
            command('hdfs dfs -put build/config/**.xml /app/config/')
            command('oozie job -oozie http://10.10.21.184:11000/oozie -config build/libs/job.properties -run')
+           command('rm -rf build')
+
 
         }
     }
