--- a/jenkins.gradle
+++ b/jenkins.gradle
@@ -7,7 +7,7 @@ job('MyJob') {
         scm('* * * * *')
     }
     steps {
-        gradle('build')
+        gradle('build copyJar')
         publishOverSsh {
             server('10.10.21.184') {
                 label('Sandbox')
@@ -30,9 +30,11 @@ job('MyJob') {
         }
 
         remoteShell('root@10.10.21.184:22') {
+           command('hadoop fs -rm /app/config')
            command('hadoop fs -rm /app/facility.jar')
            command('hdfs dfs -mkdir /app/config')
-           command('hdfs dfs -put build/libs/facility.jar /app/facility.jar')
+           command('hdfs dfs -mkdir /app/jar')
+           command('hdfs dfs -put build/libs/**.jar /app/jar/**.jar')
            command('hdfs dfs -put build/config/**.xml /app/config/')
            command('oozie job -oozie http://10.10.21.184:11000/oozie -config build/libs/job.properties -run')
            command('rm -rf build')
